@@ -43,6 +43,8 @@ v0.9.2 (WIP):
 
     BUGFIX: Canvas: Ensure canvas draw commands are separated from other ImGui draw commands (#205, #250)
 
+    BUGFIX: Editor: Don't call Canvas.End() when Canvas.Begin() failed (#186), thanks @pthom, @TheZoc
+
 
 v0.9.1 (2022-08-27):
 
